<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/Reg"
                android:textColor="@color/mainColor"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Et_FullName"
                app:layout_constraintStart_toStartOf="@+id/Et_FullName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Et_FullName"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/border_txt"
                android:paddingLeft="25dp"
                android:hint="@string/FullName"
                android:textColorHint="@color/forTxt"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/Et_Phone_Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtReg" />

            <EditText
                android:id="@+id/Et_Phone_Email"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="15dp"
                android:hint="@string/EnterPhone"
                android:textColorHint="@color/forTxt"
                android:paddingLeft="25dp"
                android:background="@drawable/border_txt"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Et_FullName"
                app:layout_constraintBottom_toTopOf="@+id/edPasswordReg"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="26dp"
                android:padding="5dp"
                android:text="@string/txtAgree"
                android:textColor="@color/forTxt"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btnReg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPasswordReg"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/forTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Et_Phone_Email"
                app:layout_constraintBottom_toTopOf="@+id/editPassword"
                android:textColorHint="@color/forTxt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/edPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_txt"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/forTxt"
                    android:password="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassword"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/mainColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPasswordReg"
                app:layout_constraintBottom_toTopOf="@+id/checkBox"
                android:textColorHint="@color/forTxt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_txt"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/mainColor"
                    android:password="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/btnReg"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:text="Register"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/forTxt"
                android:background="@drawable/btn_style"
                android:onClick="onRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintBottom_toTopOf="@+id/txtOR"/>

            <TextView
                android:id="@+id/txtOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="14sp"
                android:textColor="@color/forTxt"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnReg" />

            <android.widget.Button
                android:id="@+id/btnGOOGLE"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_style"
                android:text="GOOGLE"
                android:textColor="@color/forTxt"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/btnFACEBOOK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOR" />

            <android.widget.Button
                android:id="@+id/btnFACEBOOK"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25sp"
                android:background="@drawable/btn_style"
                android:text="FACEBOOK"
                android:textColor="@color/forTxt"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnGOOGLE"
                app:layout_constraintTop_toBottomOf="@+id/txtOR" />

            <TextView
                android:id="@+id/txtLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:text="@string/txtAlready"
                android:textSize="16sp"
                android:onClick="onLogIn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnGOOGLE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFACEBOOK"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>